--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,16 @@
   font-family: "Raleway";
   src: url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 }
-
+@font-face {
+  font-family: "Open Sans";
+  src: url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+}
+@font-face {
+  font-family: "Montserra";
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+}
 body {
-  font-family: "Raleway", Arial, serif;
+  font-family: "Raleway", "Montserra", "Open Sans", Arial, serif;
   display: flex;
   flex-direction: column;
   margin: auto;
